tests/snapshots/single__fail__string_interpolation_unknown_format.snap
---
source: tests/single.rs
expression: result.unwrap_err()
---
Error: soppo::type_error

  × Type error: unknown format verb `%z`
   ╭─[string_interpolation_unknown_format.sop:8:26]
 7 │     name := "test"
 8 │     fmt.Println("Value: {name:z}")
   ·                          ──┬─
   ·                            ╰── error occurred here
 9 │ }
   ╰────
