tests/snapshots/single__fail__try_expr_no_error.snap
---
source: tests/single.rs
expression: result.unwrap_err()
---
Error: soppo::try_expr_no_error

  × `?` requires expression to return error
    ╭─[try_expr_no_error.sop:9:15]
  8 │ func tryOnNonError() error {
  9 │     result := add(1, 2) ?
    ·               ────┬────
    ·                   ╰── this expression doesn't return error
 10 │     return nil
    ╰────
  help: the expression must return `error` or `(T, error)`

Error: soppo::unused_variable

  × Variable `result` is declared but not used
    ╭─[try_expr_no_error.sop:9:5]
  8 │ func tryOnNonError() error {
  9 │     result := add(1, 2) ?
    ·     ───┬──
    ·        ╰── unused variable
 10 │     return nil
    ╰────
  help: remove the variable, or use `_ = result` to suppress this error
