tests/snapshots/single__fail__undeclared_variable.snap
---
source: tests/single.rs
expression: result.unwrap_err()
---
Error: soppo::undefined_variable

  × Cannot find value `x` in this scope
   ╭─[undeclared_variable.sop:2:5]
 1 │ func test() int {
 2 │     x = 42
   ·     ┬
   ·     ╰── not found in this scope
 3 │     return x
   ╰────
  help: Use `:=` to declare a new variable: `x := <value>`

Error: soppo::undefined_variable

  × Cannot find value `x` in this scope
   ╭─[undeclared_variable.sop:3:12]
 2 │     x = 42
 3 │     return x
   ·            ┬
   ·            ╰── not found in this scope
 4 │ }
   ╰────
  help: Use `:=` to declare a new variable: `x := <value>`
