tests/snapshots/single__fail__undefined_type_arg.snap
---
source: tests/single.rs
expression: result.unwrap_err()
---
Error: soppo::type_error

  × Type error: cannot find type `String` in this scope
    ╭─[undefined_type_arg.sop:9:19]
  8 │ func main() {
  9 │     x := Option.None[String]
    ·                      ───┬──
    ·                         ╰── error occurred here
 10 │     _ = x
    ╰────
